--- a/src/ECommerceApp/components/ECommerceContainer/styles.css
+++ b/src/ECommerceApp/components/ECommerceContainer/styles.css
@@ -1,3 +1,9 @@
-/* .ecommerce-container{
-  background-color: red;
-} */
+.ecommerce-container{
+  /* background-color: red; */
+  margin: 0px;
+  display: flex;
+  flex-direction: column;
+  width: 100vw !important;
+  height: auto;
+  overflow: hidden;
+}
